# shapeshifter-test

./: A.txt  B.txt  C.txt  CMakeLists.txt  README.md  build-in-docker.sh  build.sh  run-in-docker.sh  run-tests-in-docker.sh
.github/workflows/: cmake.yml
src/: main.cpp  worker.cpp  worker.h
tests/: worker-test.cpp
